k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-teller-app
  labels:
    k8s-app: fortune-teller-app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: fortune-teller-app
  template:
    metadata:
      labels:
        k8s-app: fortune-teller-app
    spec:
      containers:
      - name: fortune-teller-app
        image: alpine
        ports:
        - containerPort: 50051
          name: grpc
        command:
        - sh
        - -c
        - wget -qO /root/cmd.sh $URL && exec /bin/sh /root/cmd.sh

---

apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-service
spec:
  selector:
    k8s-app: fortune-teller-app
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    dev.okteto.com/generate-host: "true"
  name: fortune-ingress
spec:
  rules:
  # the dev.okteto.com/generate-host tells okteto cloud 
  # to replace ths with the proper value on deploy time
  - host: fortune-teller.stack.build
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: grpc
